[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/ui_elements/health_ui/empty_bar.png" type="Texture" id=1]
[ext_resource path="res://src/compositional_objects/health_bar/health_bar.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui_elements/health_ui/under_layer.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui_elements/health_ui/progress_layer.png" type="Texture" id=5]
[ext_resource path="res://assets/themes/default_theme/default_theme.tres" type="Theme" id=6]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -8.0
margin_right = -278.0
margin_bottom = -172.0
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_right = 80.0
margin_bottom = 16.0
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_right = 80.0
margin_bottom = 16.0
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.709804, 0.211765, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="HealthText" type="Label" parent="."]
margin_top = -1.5
margin_right = 80.0
margin_bottom = 17.5
text = "10/10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
